<resources>
    <string name="app_name">Sistema ERD</string>
    <string name="tUsuario">Login</string>
    <string name="tSenha">Senha</string>
    <string name="btLogin">Login</string>
    <string name="btCadastrar">Cadastrar novo usuário</string>
    <string name="btInserir">Inserir</string>
    <string name="TxEscolhaOpcoes">Escolha uma das opções abaixo:</string>
    <string name="btAlterar">Alterar</string>
    <string name="btConsultar">Consultar</string>
    <string name="btExcluir">Excluir</string>
    <string name="btSair">Sair</string>
    <string name="txCadastro">Dados Cadastrais</string>
    <string name="tNome">Nome Completo</string>
    <string name="txNome" />
    <string name="txCPF" />
    <string name="tEndereço">Endereço</string>
    <string name="txLogradouro" />
    <string name="txNumero" />
    <string name="txComplemento" />
    <string name="txCEP" />
    <string name="txBairro" />
    <string name="txCidade" />
    <string name="txEstado" />
    <string name="sistemaERD">Codificando</string>
    <string name="estadosBrasileiros" />
    <string-array name="estadosBrasilerios">
        <item>Escolha um dos estados:</item>
        <item>AC - Acre</item>
        <item>AL - Alagoas</item>
        <item>AP - Amapá</item>
        <item>AM - Amazonas</item>
        <item>BA - Bahia</item>
        <item>CE - Ceará</item>
        <item>DF - Distrito Federal</item>
        <item>ES - Espírito Santo</item>
        <item>GO - Goiás</item>
        <item>MA - Maranhão</item>
        <item>MT - Mato Grosso</item>
        <item>MS - Mato Grosso do Sul</item>
        <item>MG - Minas Gerais</item>
        <item>PA - Pará</item>
        <item>PB - Paraíba</item>
        <item>PR - Paraná</item>
        <item>PE - Pernambuco</item>
        <item>PI - Piauí</item>
        <item>RJ - Rio de Janeiro</item>
        <item>RN - Rio Grande do Norte</item>
        <item>RS - Rio Grande do Sul</item>
        <item>RO - Rondônia</item>
        <item>RR - Roraima</item>
        <item>SC - Santa Catarina</item>
        <item>SP - São Paulo</item>
        <item>SE - Sergipe</item>
        <item>TO - Tocantins</item>
    </string-array>
    <string name="txtTelefone" />
    <string name="txDDD" />
    <string name="txTelefone" />
    <string name="tipoTelefone" />
    <string name="apresentaListaCadastrados">Cadastrados:</string>
    <string name="btVoltar">Voltar</string>
    <string name="btSalvar">Salvar</string>
    <string name="tvNome" />
    <string-array name="txEscolhaOpcoesTelefone">
        <item>Residencial</item>
        <item>Comercial</item>
        <item>Celular</item>
        <item>Fax</item>
    </string-array>
    <string-array name="buscaPor">
        <item>id</item>
        <item>Nome</item>
        <item>CPF</item>
    </string-array>
    <string-array name="alterarEstadosBrasileiros">
        <item>Escolha um dos estados:</item>
        <item>AC - Acre</item>
        <item>AL - Alagoas</item>
        <item>AP - Amapá</item>
        <item>AM - Amazonas</item>
        <item>BA - Bahia</item>
        <item>CE - Ceará</item>
        <item>DF - Distrito Federal</item>
        <item>ES - Espírito Santo</item>
        <item>GO - Goiás</item>
        <item>MA - Maranhão</item>
        <item>MT - Mato Grosso</item>
        <item>MS - Mato Grosso do Sul</item>
        <item>MG - Minas Gerais</item>
        <item>PA - Pará</item>
        <item>PB - Paraíba</item>
        <item>PR - Paraná</item>
        <item>PE - Pernambuco</item>
        <item>PI - Piauí</item>
        <item>RJ - Rio de Janeiro</item>
        <item>RN - Rio Grande do Norte</item>
        <item>RS - Rio Grande do Sul</item>
        <item>RO - Rondônia</item>
        <item>RR - Roraima</item>
        <item>SC - Santa Catarina</item>
        <item>SP - São Paulo</item>
        <item>SE - Sergipe</item>
        <item>TO - Tocantins</item>
    </string-array>
    <string-array name="alterarTipoTelefone">
        <item>Celular</item>
        <item>Comercial</item>
        <item>Fax</item>
        <item>Residencial</item>
    </string-array>
</resources>