<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/cardview_dark_background"
    android:descendantFocusability="blocksDescendants"
    android:foregroundGravity="bottom"
    android:longClickable="false"
    android:orientation="vertical"
    tools:context=".SegundaTela">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_weight="2"
        android:padding="20dp">

        <TextView
            android:id="@+id/TxEscolhaOpcoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Escolha uma das opções abaixo:"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:verticalScrollbarPosition="defaultPosition"
            android:visibility="visible" />

        <Button
            android:id="@+id/btInserir"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/btInserir"
            android:textSize="18sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btConsultar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/btConsultar"
            android:textSize="18sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btSair"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/btSair"
            android:textSize="18sp"
            android:visibility="visible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>