<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:padding="8dp"
    tools:context=".AlterarDadosCadastrais">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/voltarTelaPessoasCadastradas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:srcCompat="?attr/actionModeCloseDrawable"/>

                <TextView
                    android:id="@+id/dadosPessoais"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_weight="2"
                    android:gravity="center|center_horizontal"
                    android:text="Dados Cadastrais"
                    android:textColor="@color/design_default_color_secondary"
                    android:textSize="18sp"  />
            </TableRow>


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alterarId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="Id"
                android:inputType="textPersonName"
                android:textColor="#000000"
                tools:text="@string/txNome" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alterarNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="Nome Completo"
                android:inputType="textPersonName"
                android:textColor="#000000"
                tools:text="@string/txNome" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alterarCPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="CPF"
                android:text="@string/txCPF"
                android:textColor="#000000" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alterarLogradouro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="Logradouro"
                android:text="" />


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/alterarNumero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="Numero"
                    tools:text="" />

                <EditText
                    android:id="@+id/alterarComplemento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:background="@color/white"
                    android:hint="Complemento"
                    android:inputType="text"
                    tools:text="" />
            </TableRow>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alterarCEP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="CEP"
                android:text="@string/txCEP" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alterarBairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="Bairro"
                android:text="@string/txBairro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alterarCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="Cidade"
                android:text="@string/txCidade" />

            <TextView
                android:id="@+id/alterarEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="Estado"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/alterarEstadosBrasileiros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@color/white"
                android:hint="Estados"/>


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white">


            </TableLayout>

            <TextView
                android:id="@+id/telCadastrados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Telefones Cadastrados:"
                android:textColor="@color/design_default_color_secondary"
                android:textSize="18sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <Spinner
                    android:id="@+id/alterarTipoTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:layout_weight="2"
                    android:layout_marginTop="10dp"/>



                <TextView
                    android:id="@+id/alterarTelefoneCadastrado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"

                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="Nº Telefone"
                    android:text=""
                    android:textSize="18dp" />


            </TableRow>




            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btVoltar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="Voltar" />

                <Button
                    android:id="@+id/btSalvar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/btSalvar" />
            </TableRow>
        </LinearLayout>
    </ScrollView>



    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.constraintlayout.widget.ConstraintLayout>